fix: cart card overflow

--- a/src/pages/ProductListing/productListing.css
+++ b/src/pages/ProductListing/productListing.css
@@ -82,7 +82,7 @@
 
 .card {
   width: 100%;
-  max-height: 30rem ;
+  max-height: max-content ;
   border-color: white;
   border-style: none;
   border-top-left-radius: 0;
